--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "next": "15.3.2",
     "postcss": "^8.5.4",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.8",
