--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.3.0",
+    "@heroicons/react": "^2.2.0",
     "firebase": "^11.8.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
